package com.devsenior.jduvan.model;

public enum EstadoCopia {
    BIBLIOTECA,
    PRESTADA,
    CON_RETRASO,
    EN_REPARACION;
}
