package com.devsenior.jduvan.model;

public enum TipoLibro {
    NOVELA,
    TEATRO,
    POESIA,
    ENSAYO;

}
