@startuml modelo de datos de biblioteca

class Libro{
    - String nombre
    - String editorial
    - Integer año

}
enum TipoLibro{
    NOVELA
    TEATRO
    POESIA
    ENSAYO
}
class Autor{
    - String nombre
    - String nacionalidad
    - Date fechaDeNacimiento
}
class Copia{
    - Integer identificador

}

enum EstadoCopia{
    BIBLIOTECA
    PRESTADA
    CON_RETRASO
    EN_REPARACION
}

class Lector{
- String nombre
- Date fechaMulta
} 

class Prestamo{
    - Date fechaPrestamo
}



Libro --> TipoLibro : tipo
Autor "1" -- "1..*" Libro
Copia -right-> EstadoCopia: estado
Libro *-right- Copia
(Lector, Copia) -- Prestamo

@enduml
